more fixes for mobile
- link to the mobile page instead of the old print page from home and story pages
- fix linkclump not showing up
- fix mobile title

--- a/iui/iui.css
+++ b/iui/iui.css
@@ -8,20 +8,6 @@ body {
     -webkit-text-size-adjust: none;
 }
 
-body > *:not(.toolbar) {
-    display: none;
-    position: absolute;
-    margin: 0;
-    padding: 0;
-    left: 0;
-    top: 45px;
-    width: 100%;
-    min-height: 372px;
-}
-
-body[orient="landscape"] > *:not(.toolbar) {
-    min-height: 268px;
-}
 
 body > *[selected="true"] {
     display: block;
@@ -169,8 +155,8 @@ body > ul > li.group:first-child {
     border-top: none;
 }
 
-body > ul.listing > li > a {
- 
+body > ul > li > a {
+    display: block;
     margin: -8px 0 -8px -10px;
     padding: 8px 32px 8px 10px;
     text-decoration: none;
